@@ -493,6 +493,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7326: Add documentation for hdfs debug commands (Vijay Bhat via Colin
     P. McCabe)
 
+    HDFS-7598. Remove dependency on old version of guava in
+    TestDFSClientCache#testEviction. (Sangjin Lee via Colin P. McCabe)
+
   OPTIMIZATIONS
 
     HDFS-7454. Reduce memory footprint for AclEntries in NameNode.
